--- a/Produkt.html
+++ b/Produkt.html
@@ -99,7 +99,7 @@
             <div class="column-50-left">
               <img src="Bikestail_Motor_480x480px.png" alt="Motor Bikestail" width="350" height="500">
             </div>
-            <div class="column-50-right m-t-35">
+            <div class="column-50-right Anpassung-Texte">
               <h2> Kompakt und powervoll </h2>
               <p> Mit dem leistungsstarken Motor im Aluminiumgehäuse verwandelst Du dein Fahrrad in wenigen Minuten zum E-Bike!
                   Der Motor ist für jedes Fahrrad geeignet und kann in wenigen Minuten installiert und wieder entfernt werden.
@@ -114,7 +114,7 @@
         <!-- 2 columns Produktinfos mit rechts Bild links Text -->
         <div class="container-2">
           <div class="row">
-            <div class="column-50-left m-t-35">
+            <div class="column-50-left Anpassung-Texte">
               <h2> Das Komplettpaket </h2>
               <p> Mit diesem Set werden Sie Ihren Fahrspaß auf ein neues Level heben. </br> Enthalten sind: </p>
               <ul>
@@ -123,7 +123,7 @@
 								<li> Spezielles Ladekabel für lange Haltbarkeit</li>
                 <li> Passende Tasche</li>
 							</ul>
-              <p> Sie können den Motor flexibel für verschiedene Fahräder nutzen und einfach transportieren. </p>
+              <p> Sie können den Motor für verschiedene Fahräder nutzen und einfach transportieren. </p>
             </div>
             <div class="column-50-right">
               <img class="round-image-komplettpaket"src="Bikestail_480x480px.png"
@@ -227,11 +227,11 @@
 								<li>LED Ring zur Anzeige des aktuellen Ladezustandes</li>
 							</ul>
 							<div class="label">
-								<p class="p-b-0">
+								<p>
 									Menge:
 									<input type="number" class="quantity" value="1"/>
 								</p>
-								<p class="p-t-0">
+								<p>
 									Farbe:
 									<select class="color">
 										<option>Schwarz</option>
@@ -354,11 +354,11 @@
 								<li>LED Ring zur Anzeige des aktuellen Ladezustandes</li>
 							</ul>
 							<div class="label">
-								<p class="p-b-0">
+								<p>
 									Menge:
 									<input type="number" class="quantity" value="1"/>
 								</p>
-								<p class="p-t-0">
+								<p>
 									Farbe:
 									<select class="color">
 										<option>Schwarz</option>
