In Türchen 13 ist die Navigationsleiste

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -16,34 +16,44 @@
 
     <header>
       <!--Im Header ist die Navigationsleiste untergebracht-->
-      <div class="navigation">
-        <div class="topnav" id=myTopnav>
-          <a href="index.html"><img class="logo_klein" src="logo1.png" alt="Das ist unser Logo"> </a>
-          <a href="index.html">Home</a>
-          <div class="dropdown">
-            <button class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
-            <div class="dropdown-content">
-              <a href="Produkt.html#standard_variante">Standard</a>
-              <a href="Produkt.html#premium_variante">Premium</a>
-            </div>
+      <div class="nav-bar">
+        <div class="nav-container">
+          <div class="brand">
+            <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
           </div>
-          <a href="Kontakt.html">Kontakt</a>
-          <a href="Über uns.html">Über uns</a>
-          <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+          <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
+            <ul class="nav-list">
+              <li>
+                <a href="index.html">Home</a>
+              </li>
+              <li>
+                <a href="#">Produkte</a>
+                <ul class="nav-dropdown">
+                  <li>
+                    <a href="#">Standard</a>
+                  </li>
+                  <li>
+                    <a href="#">eDrive 150</a>
+                  </li>
+                  <li>
+                    <a href="#">eDrive 500</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="Kontakt.html">Kontakt</a>
+              </li>
+              <li>
+                <a href="Über uns.html">Über uns</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-      <!--Das ist das Script für die Navigationsleiste-->
-      <script>
-        function myFunction() {
-          var x = document.getElementById("myTopnav");
-          if (x.className === "topnav") {
-            x.className += " responsive";
-          } else {
-            x.className = "topnav";
-          }
-        }
-      </script>
-      <!--Ende Script Navigationsleiste-->
+
+      <script src="query.js"></script>
+      <script src="function.js"></script>
 
     </header>
     <!--Abschluss des Headerbereichs und der Navigationsleiste-->
