--- a/Kontakt.html
+++ b/Kontakt.html
@@ -20,51 +20,52 @@
       <!-- Das große Bild am Anfang der Seite -->
       <div class="FrontPicture-Logo">
         <div class="navigation-im-frontpicture">
-          <div class="topnav" id=myTopnav>
-            <div class="Logo-float-left">
-              <a href="index.html"><img src="neues_logo_transparent_300x300.png" alt="Unser Logo"> </a>
-            </div>
-
-            <div class="Rest-float-right">
-              <div class="home-ausblenden">
-              <a href="index.html">Home</a>
-            </div>
-              <a href="Kontakt.html">Kontakt</a>
-              <a href="Über uns.html">Über uns</a>
-            </div>
-
-            <div class="dropdown">
-              <button onclick="location.href='Produkt.html'" class="dropbtn">Produkte<i class="fa fa-carte-down"></i> </button>
-              <div class="dropdown-content">
-                <a href="Produkt.html#standard_variante">Standard</a>
-                <a href="Produkt.html#premium_variante">Premium</a>
+          <div class="nav-bar">
+            <div class="nav-container">
+              <div class="brand">
+                <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
               </div>
+              <nav>
+                <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
+                <ul class="nav-list">
+                  <li>
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                    <a href="#">Produkte</a>
+                    <ul class="nav-dropdown">
+                      <li>
+                        <a href="#">Standard</a>
+                      </li>
+                      <li>
+                        <a href="#">eDrive 150</a>
+                      </li>
+                      <li>
+                        <a href="#">eDrive 500</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="Kontakt.html">Kontakt</a>
+                  </li>
+                  <li>
+                    <a href="Über uns.html">Über uns</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
-
-            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
+
+          <script src="query.js"></script>
+          <script src="function.js"></script>
         </div>
-        <!--Das ist das Script für die Navigationsleiste-->
-        <script>
-          function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-              x.className += " responsive";
-            } else {
-              x.className = "topnav";
-            }
-          }
-        </script>
-        <!--Ende Script Navigationsleiste-->
 
       </div>
+  </div>
+  <!--Das ist das Script für die Navigationsleiste-->
 
-
-      </div>
-
-
-    </header>
-    <!--Abschluss des Headerbereichs und der Navigationsleiste-->
+  </header>
+  <!--Abschluss des Headerbereichs und der Navigationsleiste-->
 
 
     <main>
