Verlinkungen zu Produkten in Navigationsleiste hergestellt

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                       <a href="#">Produkte</a>
                       <ul class="nav-dropdown">
                         <li>
-                          <a href="#">Standard</a>
+                          <a href="Produkt.html#standard_variante">Standard</a>
                         </li>
                         <li>
-                          <a href="#">eDrive 150</a>
+                          <a href="Produkt.html#premium_variante">eDrive 150</a>
                         </li>
                         <li>
-                          <a href="#">eDrive 500</a>
+                          <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
                         </li>
                       </ul>
                     </li>
