Anpassungen Text Padding

--- a/Produkt.html
+++ b/Produkt.html
@@ -68,29 +68,16 @@
 
       </div>
 
-
       </div>
 
-    </header>
-    <!--Abschluss des Headerbereichs und der Navigationsleiste-->
+    </header>  <!--Abschluss des Headerbereichs und der Navigationsleiste-->
 
 
-    <main>
-      <!--Hier beginnt der Mainteil der Website-->
+    <main>  <!--Hier beginnt der Mainteil der Website-->
 
       <div id="main">
 
-        <!-- Das große Bild am Anfang der Seite -->
-    <!--    <div class="FrontPicture-Produktseite">
-          <div class="FrontPicture-Text-Produktseite">
-            <h1> Unsere Produkte </h1>
-            <p> Von der Standard Variante bis zum Premium Modell </br> Für jeden das richtige Set! </p>
-          </div>
-        </div>
-    -->
-
-        <!-- der grüne Block mit Standard -->
-        <h1 class="separator" id="standard_variante">Standard Variante</h1>
+        <h1 class="separator" id="standard_variante">Standard Variante</h1> <!-- der Block mit Standard -->
 
     <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 
@@ -116,7 +103,7 @@
         <!-- 2 columns Produktinfos mit rechts Bild links Text -->
         <div class="container-2">
           <div class="row">
-            <div class="column-50-left Anpassung-Texte">
+            <div class="column-50-left Anpassung-Text">
               <h2> Das Komplettpaket </h2>
               <p> Mit diesem Set werden Sie Ihren Fahrspaß auf ein neues Level heben. </br> Enthalten sind: </p>
               <ul>
@@ -202,6 +189,7 @@
     </div>  <!-- schließender div Block für Wrapper der Container  -->
 
 		<!-- hier endet Bikestail  -->
+
 		<!-- der grüne Block mit Premium-->
 		<h1 class="separator" id="premium_variante">Premium Variante 1</h1>
 
@@ -255,11 +243,19 @@
 			<div class="row">
 				<div class="column-50-left">
 					<h3>Die neue Motorgeneration</h3>
-					<p> Der eDrive150start ist das ideale Einstiegsprodukt in die Edrive-Produktfamilie. Die ePower150 unterstützt Dich von 13 - 28 km und ist daher ideal für Dich als Stadtpendler geeignet oder wenn Du nur punktuelle Unterstützung benötigst. Bei Deinem Weg ins Büro oder durch die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.  </p>
-					<p> Der getriebelose Mittelmotor wird anstelle der linken Kurbel montiert. Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 32 Nm, unterstützt er Deine Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst.</p>
+					<p> Der eDrive150start ist das ideale Einstiegsprodukt in die Edrive-Produktfamilie.
+            Die ePower150 unterstützt Dich von 13 - 28 km und ist daher ideal für Stadtpendler und
+            punktuelle Unterstütung geeignet.Bei Deinem Weg ins Büro oder durch
+            die Stadt unterstützt Dich der 250 Watt Motor absolut geräuschlos.  </p>
+					<p> Der getriebelose Mittelmotor wird anstelle der linken Kurbel montiert. Durch seine Konstruktion
+             und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos.
+             Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 32 Nm, unterstützt er Deine Tretleistung
+             bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Da der Motor kein
+              Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du Dein
+              Fahrrad wie bisher nutzen kannst.</p>
 				</div>
 				<div class="column-50-right">
-					<img src="video 1.gif" alt="Weltsymbol" width="500" height="700" class="m-t-35">
+					<img src="video 1.gif" alt="Weltsymbol" width="500" height="700" class="Bild-Anpassung_2">
 				</div>
 			</div>
 		</div>
@@ -271,13 +267,20 @@
 		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
-					<img src="video 2.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
+					<img src="video 2.gif" alt="Leute im Fahrrad" width="500" height="700" class="Bild-Anpassung">
 				</div>
 
 				<div class="column-50-right">
 					<h3>Mehr Leistung, mehr Funktion, mehr Fahrspaß</h3>
 					<p>
-						Die 48 V ePower150 (Akku) besitzt eine Kapazität von 140 Wh und arbeitet auf Basis moderner Lithium-Ionen Technologie. Sie kann mit einfachen Handgriffen vom Rad abgenommen werden und ist mit dem mitgelieferten 60 W Ladegerät innerhalb von 1 Stunde und 15 Minuten Stunden wieder vollständig geladen. Während der Fahrt zeigt Dir der Akku durch den farblich wechselnden LED Ring den aktuellen Ladestand an. Der Akku besitzt einen Power Knopf über den dieser angeschaltet werden kann. Anschließend wird zu Deiner eigenen Tretleistung 150 % hinzugesteuert. Durch diese smarte Bauweise benötigst Du kein zusätzliches Display am Lenker. Möchtest Du dennoch aktuelle Daten sichtbar am Lenker haben, so kannst Du mit der Bluetoothfunktion des Akkus diesen mit Deinem Smartphone und der Bikepower App verbinden. Montiert wird die eDrive150 mit einem Kunststoffhalter direkt am Fahrradrahmen.
+						Die 48 V ePower150 (Akku) besitzt eine Kapazität von 140 Wh und arbeitet auf Basis moderner Lithium-Ionen
+            Technologie. Sie kann mit einfachen Handgriffen vom Rad abgenommen werden und ist mit dem mitgelieferten
+            60 W Ladegerät innerhalb von einer Stunde und 15 Minuten wieder vollständig geladen. Während der Fahrt
+            zeigt Dir der Akku durch den farblich wechselnden LED Ring den aktuellen Ladestand an. Anschließend wird zu
+            Deiner eigenen Tretleistung 150 % hinzugesteuert. Durch diese smarte Bauweise benötigst Du kein zusätzliches
+            Display am Lenker. Möchtest Du dennoch aktuelle Daten sichtbar am Lenker haben, so kannst Du mit der Bluetoothfunktion
+            des Akkus diesen mit Deinem Smartphone und der Bikepower App verbinden. Montiert wird der eDrive150 mit einem
+            Kunststoffhalter direkt am Fahrradrahmen.
 					</p>
 				</div>
 			</div>
@@ -330,7 +333,7 @@
 		</div>
   </div> <!-- schließender div Block für Wrapper der Container  -->
 		<!-- der grüne Block mit Premium-->
-		<h1 class="separator m-t-35" id="premium_variante_2">Premium Variante 2 </h1>
+		<h1 class="separator" id="premium_variante_2">Premium Variante 2 </h1>
 
   <div class="wrapper_für_container"> <!--Wrapper damit bei sehr großen Bildschirmen die Spalten nicht zu weit nach außen rutschen  -->
 		<!-- 2 columns Produktinfos mit rechts Bild links Text -->
@@ -348,7 +351,9 @@
 					<div class="product-data">
 						<div class="descripcion">
 							<p>
-								Dank des eDrive1000 Umbausatzes wird aus Deinem Fahrrad ein zuverlässiges und leistungsstarkes eBike. Das System passt an nahezu jeden Rahmentyp, egal ob City-, Trekking-, Lasten- oder Mountainbikes, es muss nur genügend Platz für den Akku und den Motor am Rahmen vorhanden sein.
+								Dank des eDrive1000 Umbausatzes wird aus Deinem Fahrrad ein zuverlässiges und leistungsstarkes eBike.
+                Das System passt an nahezu jeden Rahmentyp, egal ob City-, Trekking-, Lasten- oder Mountainbikes. Es
+                muss nur genügend Platz für den Akku und den Motor am Rahmen vorhanden sein.
 							</p>
 							<ul>
 								<li>Einfache Bedienung</li>
@@ -382,11 +387,17 @@
 			<div class="row">
 				<div class="column-50-left">
 					<h3>Einer für alle.</h3>
-					<p> Das System unterstützt Riemen- sowie Kettenantrieb. Dieser muss sich auf der rechten Seite des Fahrrads befinden. Zudem ist es notwendig, dass Dein Fahrrad über ein BSA Tretlager verfügt. Der eDrive1000 ist bei Mitnahme des Zusatzakkus ideal für Deine Strecken von 124* km bis zu 240* km Länge. </p>
-					<p> Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 65 Nm, unterstützt er Deine eigene Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder). Höhere Geschwindigkeiten können durch den Einsatz reiner Muskelkraft erreicht werden. Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du auch noch Dein Fahrrad wie bisher nutzen kannst. </p>
+					<p> Das System unterstützt Riemen- sowie Kettenantrieb. Dieser muss sich auf der rechten Seite des Fahrrads befinden.
+            Zudem ist es notwendig, dass Dein Fahrrad über ein BSA Tretlager verfügt. Der eDrive1000 ist bei Mitnahme des
+            Zusatzakkus ideal für Deine Strecken von 124 - 240 km Länge. </p>
+					<p> Durch seine Konstruktion und Position am Fahrrad sorgt er für ein besonders natürliches Fahrgefühl und ist
+            absolut geräuschlos. Bei einer Leistung von 250 Watt und einem maximalen Drehmoment von 65 Nm, unterstützt er
+            Deine eigene Tretleistung bis zu einer Geschwindigkeit von 25 km/h (gesetzlich zulässiger Maximalwert für EU-Länder).
+            Da der Motor kein Getriebe besitzt ist kein Tretwiderstand bei ausgeschaltetem Akku spürbar, sodass Du Dein
+            Fahrrad wie bisher nutzen kannst. </p>
 				</div>
 				<div class="column-50-right">
-					<img src="video 3.gif" alt="Weltsymbol" width="500" height="700" class="m-t-35">
+					<img src="video 3.gif" alt="Weltsymbol" width="500" height="700" class="Bild-Anpassung_2">
 				</div>
 			</div>
 		</div>
@@ -398,7 +409,7 @@
 		<div class="container-2">
 			<div class="row">
 				<div class="column-50-left">
-					<img src="video 5.gif" alt="Leute im Fahrrad" width="500" height="700" class="m-t-35">
+					<img src="video 5.gif" alt="Leute im Fahrrad" width="500" height="700" class="Bild-Anpassung">
 				</div>
 
 				<div class="column-50-right">
